# STEX-rs

./: .gitignore  Cargo.toml  README.md  Unity.shader
shaders/CVD/: core.hlsl
src/: core.rs  daemon.rs  main.rs  replace.rs
src/daemon/: mod.rs  registered_template.rs
src/template/: mod.rs
src/template/template_header/: error.rs  mod.rs  types.rs
src/template_header/: mod.rs  types.rs
templates/CVD/: Unity.shader
