[package]
name = "cvd-shader-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"]}
toml = "0.8.8"
thiserror = "1.0.52"
void = "1.0.2"