[package]
name = "cvd-shader-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3	    # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"]}
toml = "0.8.8"
thiserror = "1.0.52"
clap = { version = "4.4.18", features = ["derive"]}
path-dedot = "3.1.1"